   to write 16-bit code with C language! So AS will add prefix 0x66&0x67 automatically
   before [call], [ret], [leave], [jmp](and so on). Before today i really really haven't
   seen if there exist some differences between .code16gcc and .code16.

2. Ok now we have .code16gcc to fire. Although we are still run in Real-Mode, but the
   most important instructions like call, ret, leave, push now all have 32-bit prefixes,
   which means they all operate in 4-byte world! Call is calll, ret is retl, leave is leavel.

3. Now we really dont need -mregparm anymore. The reason is we are in a "32-bit" Real-Mode,
   calll pushs 4bytes into stack. BTW, the code generated with -mregparam opinion is some
   kind of redundant. In some code, the caller put arguments in eax-edx-ecx, but the callee
   push the three registers into stack first, then use arguments in stack.

4. Conclusion: problem raised yesterday is solved! Just use .code16gcc instead of .code16,
   we are free in Read-Mode C programming!!!


2015/04/19

As we are adding more code to 16-bit setup image, the image is fatter than before.
We have to pay 100% attention to how to set [%sp], which can't too high nor too low.
In addition, pay attention to bootsect.s, change the loading sector numbers of image.
Make sure we have load all sectors of image to main memory.

2015/04/20

I spend 3 hours trying to find out what's the damn bug in my printf. It turns out that 
it's not the bug's problem. It's my problem! I totally forgot what i said yerterday:
Change the sectors of header need to be loaded into memory. The header this afternoon
is about 3600 bytes, but bootsect.s only load 7 sectors, that's why.


2015/04/21

Today is my first time use IO port instruction! There is an interesting port: 0x80.
Most systems use 0x80 to generate an IO delay. No matter read or write to this port,
it won't have reaction, and we will get about 1 microsecond delay. Someone say this
port is used by BIOS in POST.
